# micropython-project-template

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: status.yaml
scripts/: build.py
src/: boot.py  main.py
src/sub_pkg/: __init__.py  module.py
